Bersihkan halaman tim penciri lama
